更新框架加载机制，加入几个组件实例

--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,14 @@
   <div id="messageBox"></div>
   <!-- 全局消息提示 end -->
 
+  <!-- 全局confirm -->
+  <div id="confirmBox"></div>
+  <!-- 全局confirm end -->
+
+  <!-- 分享弹窗 -->
+  <div id="sharePop"></div>
+  <!-- 分享弹窗 end -->
+
   <!-- 全页面loading -->
   <div class="full-page-loading hide" id="fullPageLoading">
     <div class="mask"></div>
